crates/rgb-ecs-derive/tests/ui/fail_string.rs
//! Test that String is forbidden in components.

use rgb_ecs_derive::Component;

#[derive(Component, Clone)]
struct PlayerName {
    name: String,
}

fn main() {}
